style : styling done

--- a/09-04-21/task2/style.css
+++ b/09-04-21/task2/style.css
@@ -11,6 +11,11 @@ body{
     text-align: center;
     font-family: 'Montserrat', 
     sans-serif;
+    color: grey;
+}
+
+.focus{
+    color: var(--color3);
 }
 
 .outermost__box{
