--- a/16-04-21/styles.css
+++ b/16-04-21/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 :root{
     --bg-color-100 : #DBEAFE;
@@ -13,16 +13,15 @@
 body{
     margin: 0;
     text-align: center;
-    font-family: 'Montserrat', 
-    sans-serif;
+    font-family: 'Permanent Marker', cursive;
     background: var(--bg-color-100);
+    display: flex;
     flex-direction: column;
 }
 
 .card-deck{
     background: var(--bg-color-400);
     max-width: 38rem;
-    height: 38rem;
     margin: auto;
     border-radius: 20px;
 }
@@ -39,7 +38,7 @@ ul{
     background: var(--bg-color-900);
     width: 8rem;
     height: 8rem;
-    margin: 1.2rem 0 0 ;
+    margin: 0.5rem;
     padding: 1rem;
     border-radius: 5px;
     color: white;
@@ -66,4 +65,9 @@ ul{
 
 .card.disable{
     pointer-events: none;
+}
+
+.outputs{
+    padding-bottom: 1rem;
+    font-size: large;
 }
